--- a/src/resources/views/mainMenu.fxml
+++ b/src/resources/views/mainMenu.fxml
@@ -9,12 +9,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.mainMenu">
    <children>
-      <Text layoutX="398.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMINI TRADINGS" x="50.0" y="50.0" AnchorPane.bottomAnchor="589.9873046875" AnchorPane.leftAnchor="448.0" AnchorPane.rightAnchor="448.66748046875" AnchorPane.topAnchor="21.1904296875">
+      <Text layoutX="421.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0" AnchorPane.bottomAnchor="588.0" AnchorPane.leftAnchor="471.0" AnchorPane.rightAnchor="470.4501953125" AnchorPane.topAnchor="21.0">
          <font>
             <Font name="Agency FB Bold" size="65.0" />
          </font>
       </Text>
-      <JFXButton fx:id="reports" buttonType="RAISED" layoutX="1078.0" layoutY="183.0" onMouseClicked="#openReports" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Reports">
+      <JFXButton fx:id="reports" buttonType="RAISED" focusTraversable="false" layoutX="1078.0" layoutY="183.0" onMouseClicked="#openReports" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Reports">
          <graphic>
             <ImageView fitHeight="94.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../icons/logistics.png" />
@@ -24,7 +24,7 @@
             <Font name="System Bold" size="27.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="sell" buttonType="RAISED" layoutX="761.0" layoutY="183.0" onMouseClicked="#openSell" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Sell">
+      <JFXButton fx:id="sell" buttonType="RAISED" focusTraversable="false" layoutX="761.0" layoutY="183.0" onMouseClicked="#openSell" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Sell">
          <graphic>
             <ImageView fitHeight="84.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../icons/delivery-man1.png" />
@@ -34,7 +34,7 @@
             <Font name="System Bold" size="43.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="buy" buttonType="RAISED" layoutX="406.0" layoutY="183.0" onMouseClicked="#openBuy" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Buy">
+      <JFXButton fx:id="buy" buttonType="RAISED" focusTraversable="false" layoutX="406.0" layoutY="183.0" onMouseClicked="#openBuy" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Buy">
          <graphic>
             <ImageView fitHeight="85.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../icons/delivery-man.png" />
@@ -44,7 +44,7 @@
             <Font name="System Bold" size="39.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="items" buttonType="RAISED" layoutX="64.0" layoutY="183.0" onMouseClicked="#openItems" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Items">
+      <JFXButton fx:id="items" buttonType="RAISED" focusTraversable="false" layoutX="64.0" layoutY="183.0" onMouseClicked="#openItems" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Items">
          <graphic>
             <ImageView fitHeight="79.0" fitWidth="84.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../icons/loads.png" />
