--- a/src/resources/views/mainMenu.fxml
+++ b/src/resources/views/mainMenu.fxml
@@ -4,14 +4,13 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.mainMenu">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.mainMenu">
    <children>
       <Text layoutX="421.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0" AnchorPane.bottomAnchor="588.0" AnchorPane.leftAnchor="471.0" AnchorPane.rightAnchor="470.4501953125" AnchorPane.topAnchor="21.0">
          <font>
@@ -66,13 +65,48 @@
           <NumberAxis fx:id="yAxis" side="LEFT" />
         </yAxis>
       </BarChart>
-      <PieChart fx:id="day" layoutX="847.0" layoutY="371.0" prefHeight="300.0" prefWidth="357.0" />
       <Text layoutX="213.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Weekly Statistics">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
       </Text>
-      <Text layoutX="934.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Daily Statistics">
+      <JFXButton fx:id="sell1" buttonType="RAISED" focusTraversable="false" layoutX="585.0" layoutY="313.0" onMouseClicked="#openSell" prefHeight="112.0" prefWidth="347.0" style="-fx-background-color: #42f4dc;" text="Company">
+         <graphic>
+            <ImageView fitHeight="84.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../icons/delivery-man1.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="43.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="sell11" buttonType="RAISED" focusTraversable="false" layoutX="585.0" layoutY="442.0" onMouseClicked="#openSell" prefHeight="112.0" prefWidth="347.0" style="-fx-background-color: #42f4dc;" text="Customer">
+         <graphic>
+            <ImageView fitHeight="84.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../icons/delivery-man1.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="43.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="sell111" buttonType="RAISED" focusTraversable="false" layoutX="585.0" layoutY="569.0" onMouseClicked="#openSell" prefHeight="112.0" prefWidth="347.0" style="-fx-background-color: #42f4dc;" text="Cheque">
+         <graphic>
+            <ImageView fitHeight="84.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../icons/delivery-man1.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="43.0" />
+         </font>
+      </JFXButton>
+      <Text layoutX="1059.0" layoutY="363.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recent Cheques">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
