--- a/src/resources/views/mainMenu.fxml
+++ b/src/resources/views/mainMenu.fxml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.paint.*?>
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
@@ -10,17 +18,24 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.mainMenu">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.mainMenu">
    <children>
-      <Text layoutX="421.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0" AnchorPane.bottomAnchor="588.0" AnchorPane.leftAnchor="471.0" AnchorPane.rightAnchor="470.4501953125" AnchorPane.topAnchor="21.0">
+      <ImageView fitHeight="699.0" fitWidth="1372.0" layoutX="-9.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/background.jpg" />
+         </image>
+      </ImageView>
+      <Text fill="#fcfcfc" fontSmoothingType="LCD" layoutX="399.0" layoutY="28.0" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" textAlignment="CENTER" underline="true" x="50.0" y="50.0" AnchorPane.bottomAnchor="597.4375" AnchorPane.leftAnchor="449.0" AnchorPane.rightAnchor="401.6875" AnchorPane.topAnchor="18.125">
          <font>
-            <Font name="Agency FB Bold" size="65.0" />
+            <Font name="Arial Narrow Bold" size="64.0" />
          </font>
       </Text>
       <JFXButton fx:id="reports" buttonType="RAISED" focusTraversable="false" layoutX="1078.0" layoutY="183.0" onMouseClicked="#openReports" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Reports">
          <graphic>
             <ImageView fitHeight="94.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../icons/logistics.png" />
+               <image>
+                  <Image url="@../icons/logistics.png" />
+               </image>
             </ImageView>
          </graphic>
          <font>
@@ -30,7 +45,9 @@
       <JFXButton fx:id="sell" buttonType="RAISED" focusTraversable="false" layoutX="761.0" layoutY="183.0" onMouseClicked="#openSell" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Sell">
          <graphic>
             <ImageView fitHeight="84.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../icons/delivery-man1.png" />
+               <image>
+                  <Image url="@../icons/delivery-man1.png" />
+               </image>
             </ImageView>
          </graphic>
          <font>
@@ -40,24 +57,31 @@
       <JFXButton fx:id="buy" buttonType="RAISED" focusTraversable="false" layoutX="406.0" layoutY="183.0" onMouseClicked="#openBuy" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Buy">
          <graphic>
             <ImageView fitHeight="85.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../icons/delivery-man.png" />
+               <image>
+                  <Image url="@../icons/delivery-man.png" />
+               </image>
             </ImageView>
          </graphic>
          <font>
             <Font name="System Bold" size="39.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="items" buttonType="RAISED" focusTraversable="false" layoutX="64.0" layoutY="183.0" onMouseClicked="#openItems" prefHeight="112.0" prefWidth="233.0" style="-fx-background-color: #42f4dc;" text="Items">
+      <JFXButton fx:id="items" buttonType="RAISED" focusTraversable="false" layoutX="64.0" layoutY="183.0" onMouseClicked="#openItems" prefHeight="112.0" prefWidth="233.0" ripplerFill="#9a2a2a" style="-fx-background-color: gray; -fx-border-color: lightblue; -fx-border-radius: 10; -fx-background-radius: 10;" text="Items" textFill="WHITE">
+         <font>
+            <Font name="Baskerville Old Face" size="37.0" />
+         </font>
          <graphic>
             <ImageView fitHeight="79.0" fitWidth="84.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../icons/loads.png" />
+               <image>
+                  <Image url="@../icons/loads.png" />
+               </image>
             </ImageView>
          </graphic>
-         <font>
-            <Font name="System Bold" size="31.0" />
-         </font>
+         <effect>
+            <Reflection bottomOpacity="0.08" fraction="0.17" topOpacity="0.07" />
+         </effect>
       </JFXButton>
-      <BarChart fx:id="week" layoutX="68.0" layoutY="382.0" prefHeight="289.0" prefWidth="445.0">
+      <BarChart fx:id="week" focusTraversable="true" layoutX="68.0" layoutY="382.0" prefHeight="289.0" prefWidth="445.0" style="-fx-border-color: white; -fx-border-radius: 15; -fx-background-color: white; -fx-background-radius: 15;">
         <xAxis>
           <CategoryAxis side="BOTTOM" fx:id="xAxis" />
         </xAxis>
@@ -65,7 +89,7 @@
           <NumberAxis fx:id="yAxis" side="LEFT" />
         </yAxis>
       </BarChart>
-      <Text layoutX="213.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Weekly Statistics">
+      <Text fill="WHITE" layoutX="213.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Weekly Statistics">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
